Adding code coverage to test task Generating docs for test code Adding useful test classes to dist Changing some internal methods for testing access Adding support for overriding dummy action Fixing LocalizedProperties to support mac line endings in properties files Adding back support for a single scalar argument to message retrieval (instead of expected array) Throwing an error in MessageFormat when something goes wrong in message retrieve and dev mode is on Adding support for converting float to int in message formatting Extending date formatting support in message formatting, duration and relative time still not supported Fixing Str::formatNumber such that a null value for num decimals doesn't overwrite default and fixing calculation of decimals to display. Allowing override of config and action config for testing purposes
NOTE: Override implementation causes test failure across tests that require different values for constants. Currently investigating the impact of switching to global variables instead of constants.

--- a/build.xml
+++ b/build.xml
@@ -28,7 +28,11 @@
 		<mkdir dir="${logs.dir}" />
 		
 		<exec dir="${test.dir}" executable="phpunit.bat" failonerror="true">
-			<arg line="--log-junit ${logs.dir}/UbarTestSuite.xml  --verbose UbarTestSuite" />
+			<arg line="--log-junit ${logs.dir}/UbarAllTests.xml  --verbose UbarAllTests" />
+		</exec>
+		
+		<exec dir="${test.dir}" executable="phpunit.bat" failonerror="true">
+			<arg line="--coverage-html ${logs.dir}/coverage UbarAllTests" />
 		</exec>
 	</target>
 	
@@ -59,8 +63,10 @@
 			<arg value="HTML:frames:default" />
 			<arg value="--directory" />
 			<arg value="${basedir}" />
-			<arg value="--ignore" />
+			<!--
+			<arg value="-ignore" />
 			<arg value="${basedir}/test*" />
+			-->
 			<arg value="--title" />
 			<arg value="Ubar PHP MVC Framework Documentation" />
 			<arg value="--parseprivate" />
@@ -84,6 +90,11 @@
 				<exclude name="README"/>
 			</fileset>
 		</copy>
+		
+		<!-- copy test files developers will want to use to test their app -->
+		<copy file="${test.dir}/UbarBaseActionTestCase.php" tofile="${lib.build.dir}/test/UbarBaseActionTestCase.php"/>
+		<copy file="${test.dir}/UbarBaseTestCase.php" tofile="${lib.build.dir}/test/UbarBaseTestCase.php"/>
+		<copy file="${test.dir}/UbarTestSuite.php" tofile="${lib.build.dir}/test/UbarTestSuite.php"/>
 
 		<!-- copy .in files to build directory for inclusion in archive -->
 		<copy file="${config.name}.in" tofile="${lib.build.dir}/${config.name}"/>
