--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -36,8 +36,39 @@
 		</exec>
 	</target>
 	
-	<target name="build-sample" description="Build sample implementation of framework">
+	<target name="build-sample" description="Build sample implementation of framework" depends="build-source">
+		<!-- re-init sample dist dir -->
+		<delete dir="${sample.dir}" />
+		<mkdir dir="${sample.dir}" />
+		
+		<!-- copy sample content over -->
+		<copy todir="${sample.dir}">
+			<fileset dir="${basedir}/sample/">
+				<exclude name="config/"/>
+			</fileset>
+		</copy>
+		
 		<!-- install framework into ignored lib folder of sample application -->
+		<copy todir="${sample.dir}/WEB-INF/lib/ubar">
+			<fileset dir="${lib.build.dir}">
+				<exclude name="install/"/>
+				<exclude name="ubar_config.properties"/>
+				<exclude name="ubar.xml"/>
+			</fileset>
+		</copy>
+		
+		<!-- install elements from install directory -->
+		<copy todir="${sample.dir}/web/">
+			<fileset dir="${lib.build.dir}/install">
+			</fileset>
+		</copy>
+		
+		<!-- copy sample config and action config -->
+		<copy todir="${sample.dir}/WEB-INF/lib/ubar">
+			<fileset dir="${basedir}/sample/config">
+			</fileset>
+		</copy>
+		
 	</target>
 	
 	<target name="test-sample" description="Smoke test for sample working as expected">
@@ -63,10 +94,8 @@
 			<arg value="HTML:frames:default" />
 			<arg value="--directory" />
 			<arg value="${basedir}" />
-			<!--
-			<arg value="-ignore" />
-			<arg value="${basedir}/test*" />
-			-->
+			<arg value="--ignore" />
+			<arg value="${basedir}/test/core/*,${basedir}/test/data/*,${basedir}/test/sample/*,${basedir}/sample/*,${basedir}/dist/*,${basedir}/test/UbarAllTests.php" />
 			<arg value="--title" />
 			<arg value="Ubar PHP MVC Framework Documentation" />
 			<arg value="--parseprivate" />
@@ -84,6 +113,8 @@
 				<exclude name="dist/"/>
 				<exclude name="build/"/>
 				<exclude name="test/"/>
+				<exclude name="logs/"/>
+				<exclude name="sample/"/>
 				<exclude name="build.properties"/>
 				<exclude name="${config.name}*"/>
 				<exclude name="${actiondefs.name}*"/>
@@ -107,14 +138,19 @@
 		
 		<!-- copy README to root instead of being in lib -->
 		<copy file="${basedir}/README" tofile="${build.dir}/README"/>
-		
-		<!-- copy sample application to root instead of being in lib -->
-		
-		
+
 		<!-- zip contents of build dir -->
 		<zip
 			destfile="${dist.dir}/${package.name}"
 			basedir="${build.dir}"
+		/>
+		
+		<!-- copy sample application to root instead of being in lib -->
+		<zip
+			update="true"
+			destfile="${dist.dir}/${package.name}"
+			basedir="${dist.dir}"
+			includes="sample/**"
 		/>
 		
 		<!-- merge in docs already in dist dir -->
