--- a/trunk/test/sample/ubar_sample_config.properties
+++ b/trunk/test/sample/ubar_sample_config.properties
@@ -2,16 +2,16 @@
 ## TODO: consider lowercasing and using namespaces like db.user = false, db.server = foo, db.server.devMode = bar
 
 ## base location of model and action classes as well as view files
-BASE_ACTION_PATH			= /sample/controller/
-BASE_ACTION_PATH_DEV_MODE	= /sample/controller/
-BASE_VIEW_PATH				= /sample/view/
-BASE_VIEW_PATH_DEV_MODE		= /sample/view/
-BASE_MODEL_PATH				= /sample/model/
-BASE_MODEL_PATH_DEV_MODE	= /sample/model/
+BASE_ACTION_PATH			= /sample/WEB-INF/controller/
+BASE_ACTION_PATH_DEV_MODE	= /sample/WEB-INF/controller/
+BASE_VIEW_PATH				= /sample/WEB-INF/view/
+BASE_VIEW_PATH_DEV_MODE		= /sample/WEB-INF/view/
+BASE_MODEL_PATH				= /sample/WEB-INF/model/
+BASE_MODEL_PATH_DEV_MODE	= /sample/WEB-INF/model/
 
 ## location of properties files
-PROPERTIES_PATH				= /sample/properties/
-PROPERTIES_PATH_DEV_MODE	= /sample/properties/
+PROPERTIES_PATH				= /sample/WEB-INF/properties/
+PROPERTIES_PATH_DEV_MODE	= /sample/WEB-INF/properties/
 
 # properties root name (ie, root of resources_de.properties would be "resources"
 PROPERTIES_ROOT				= sample
@@ -61,7 +61,7 @@ DB_NAME_DEV_MODE			= sample
 ## schema version, used to do automatic schema updates if configured correctly
 SCHEMA_VERSION				= 3
 ## provide path and file name convention for sql schema files. MARK THE LOCATION OF THE VERSION NUMBER WITH A '*' (ex ../../sql/schema_*.sql)
-SCHEMA_PATH					= /sample/sql/schema_*.sql
+SCHEMA_PATH					= /sample/WEB-INF/sql/schema_*.sql
 
 ## session lifetime
 SESSION_LIFETIME			= 86400000
