--- a/trunk/ubar_config.properties.in
+++ b/trunk/ubar_config.properties.in
@@ -2,79 +2,79 @@
 ## TODO: consider lowercasing and using namespaces like db.user = false, db.server = foo, db.server.devMode = bar
 
 ## base location of model and action classes as well as view files
-BASE_ACTION_PATH			= ../../controller/
-BASE_ACTION_PATH_DEV_MODE	= ../../controller/
-BASE_VIEW_PATH				= ../../view/
-BASE_VIEW_PATH_DEV_MODE		= ../../view/
-BASE_MODEL_PATH				= ../../model/
-BASE_MODEL_PATH_DEV_MODE	= ../../model/
+#BASE_ACTION_PATH			= ../../controller/
+#BASE_ACTION_PATH_DEV_MODE	= ../../controller/
+#BASE_VIEW_PATH				= ../../view/
+#BASE_VIEW_PATH_DEV_MODE	= ../../view/
+#BASE_MODEL_PATH			= ../../model/
+#BASE_MODEL_PATH_DEV_MODE	= ../../model/
 
 ## location of properties files
-PROPERTIES_PATH				= ../../properties/
-PROPERTIES_PATH_DEV_MODE	= ../../properties/
+#PROPERTIES_PATH			= ../../properties/
+#PROPERTIES_PATH_DEV_MODE	= ../../properties/
 
 # properties root name (ie, root of resources_de.properties would be "resources"
-PROPERTIES_ROOT				= resources
+#PROPERTIES_ROOT			= resources
 
 ## Default Timezone
-TIMEZONE_DEFAULT			= America/Los_Angeles
+#TIMEZONE_DEFAULT			= America/Los_Angeles
 
 ## default locale
-LOCALE_DEFAULT				= english-usa,en_US.utf8
+#LOCALE_DEFAULT				= english-usa,en_US.utf8
 
 ## display errors
 ## NOTE: dev mode will override this
-DISPLAY_ERRORS				= false
+#DISPLAY_ERRORS				= false
 
 ## show html in errors - note, this is not important as long as custom error handler used
-HTML_ERRORS					= false
+#HTML_ERRORS				= false
 
 ## error reporting level
-ERROR_LEVEL					= E_COMPILE_ERROR|E_RECOVERABLE_ERROR|E_ERROR|E_CORE_ERROR
+#ERROR_LEVEL				= E_COMPILE_ERROR|E_RECOVERABLE_ERROR|E_ERROR|E_CORE_ERROR
 ## dev mode override
-ERROR_LEVEL_DEV_MODE		= E_ALL|E_STRICT
+#ERROR_LEVEL_DEV_MODE		= E_ALL|E_STRICT
 
 ## error logging
-LOG_ERRORS					= false
-LOG_ERRORS_DEV_MODE			= true
+#LOG_ERRORS					= false
+#LOG_ERRORS_DEV_MODE		= true
 
 ## use magic quotes
 ## NOTE: if this is set to off, use addslashes to add slashes before quotes
-MAGIC_QUOTES				= false
+#MAGIC_QUOTES				= false
 
 ## database connection info
 ## TODO: determine if other db specific settings are worth pushing here
 # flag for using db - allows you to disable without having to comment out each db setting
-DB_USE						= true
+#DB_USE						= true
 ## server
-DB_SERVER					= localhost
-DB_SERVER_DEV_MODE			= localhost
+#DB_SERVER					= localhost
+#DB_SERVER_DEV_MODE			= localhost
 ## user
-DB_USERNAME					= notroot
-DB_USERNAME_DEV_MODE		= root
+#DB_USERNAME				= notroot
+#DB_USERNAME_DEV_MODE		= root
 ## password
-DB_PASSWORD					= strongpassword
-DB_PASSWORD_DEV_MODE		= password
+#DB_PASSWORD				= strongpassword
+#DB_PASSWORD_DEV_MODE		= password
 ## database name
-DB_NAME						= mydatabase
-DB_NAME_DEV_MODE			= mytestdatabase
+#DB_NAME					= mydatabase
+#DB_NAME_DEV_MODE			= mytestdatabase
 ## schema version, used to do automatic schema updates if configured correctly
-SCHEMA_VERSION				= 2
+#SCHEMA_VERSION				= 2
 ## provide path and file name convention for sql schema files. MARK THE LOCATION OF THE VERSION NUMBER WITH A '*' (ex ../../sql/schema_*.sql)
-SCHEMA_PATH					= ../../sql/schema_*.sql
+#SCHEMA_PATH				= ../../sql/schema_*.sql
 
 ## session lifetime
-SESSION_LIFETIME			= 86400000
+#SESSION_LIFETIME			= 86400000
 
 ## TODO: add file upload configuration
 
 ## DEFAULT CHARSET
-CHARSET						= UTF-8
+#CHARSET					= UTF-8
 
 # USE XHTML? - only adds header if browser supports it
-USE_XHTML					= false
+#USE_XHTML					= false
 
 ## dev mode - make error reporting more verbose, use dev mode specific config from above, possible other dev specific settings
 ## NOTE: DO NOT PUSH UP WITH THIS SET TO TRUE
 ## TODO: have a second value that is the dev mode host so that it's conditional on whether installed on dev box...?
-DEV_MODE					= true
+#DEV_MODE					= true
