Excluding a doc specific document from the dist. Adding a helper method to set dynamic titles (ie, something you assemble in the action itself). Adding a helper method to strip non ascii chars. Updating the readme to have useful information. Commenting out most properties by default in the config file

--- a/build.xml
+++ b/build.xml
@@ -120,6 +120,7 @@
 				<exclude name="${config.name}*"/>
 				<exclude name="${actiondefs.name}*"/>
 				<exclude name="README"/>
+				<exclude name="core.html"/>
 			</fileset>
 		</copy>
 		
