Removing build file from dist. Fixing issue with ActionMapper where dummy action path was set to ".php" when no path was found. Excluded newlines from ASCII stripping method. Modifying default behaviors in .htaccess file for more stable behaviors across environment. Includes standard cache and compression behaviors. Will need to be documented or commented out for future iterations due to possible user configurations where such header modification is not appropriate.

--- a/build.xml
+++ b/build.xml
@@ -121,6 +121,7 @@
 				<exclude name="${actiondefs.name}*"/>
 				<exclude name="README"/>
 				<exclude name="core.html"/>
+				<exclude name="build.xml"/>
 			</fileset>
 		</copy>
 		
