--- a/install/.htaccess
+++ b/install/.htaccess
@@ -1,15 +1,88 @@
-#disable directory listing and follow sim links
-Options -Indexes FollowSymLinks
+#turn off etags
+<ifModule mod_headers.c>
+	Header unset ETag
+</ifModule>
+FileETag None
 
-# remap action request to controller
-RewriteEngine  On
-RewriteRule ^[^/]+\.action$ /index.php [NE,L]
+# try to gzip components
+<ifModule mod_gzip.c>
+	mod_gzip_on Yes
+	mod_gzip_keep_workfiles No
+	mod_gzip_minimum_file_size 500
+	mod_gzip_maximum_file_size 500000
+	mod_gzip_maximum_inmem_size 30000
+	mod_gzip_min_http 1001
+	mod_gzip_handle_methods GET POST
+	
+	mod_gzip_item_include file \.(x?html?|php|pl|txt)$
+	mod_gzip_item_include file \.css$
+	mod_gzip_item_include file \.js$
+	mod_gzip_item_include handler ^cgi-script$
+	mod_gzip_item_include mime ^text/.*
+	mod_gzip_item_include mime ^application/x-javascript.*
+	mod_gzip_item_exclude mime ^image/.*
+	mod_gzip_item_exclude rspheader ^Content-Encoding:.*gzip.*
+	
+	mod_gzip_dechunk Yes
+</ifModule>
+
+#disable directory listing
+#Options -Indexes
 
 #default location
 DirectoryIndex index.php
 
-#hide framework files
-<Files .htaccess>
-	order allow,deny
-	deny from all
-</Files>
+# set cache control
+<ifModule mod_headers.c>
+	<filesMatch "\\.(ico|pdf|flv|jpg|jpeg|png|gif|swf)$">
+		Header set Cache-Control "max-age=146000000, public"
+	</filesMatch>
+	<filesMatch "\\.(css)$">
+		Header set Cache-Control "max-age=146000000, public"
+	</filesMatch>
+	<filesMatch "\\.(js)$">
+		Header set Cache-Control "max-age=146000000, private"
+	</filesMatch>
+	<filesMatch "\\.(xml|txt)$">
+		Header set Cache-Control "max-age=216000, public, must-revalidate"
+	</filesMatch>
+	<filesMatch "\\.(html|htm)$">
+		Header set Cache-Control "max-age=600, private, must-revalidate"
+	</filesMatch>
+	<filesMatch "\\.(action|php)$">
+		Header set Cache-Control "max-age=1, private, must-revalidate"
+	</filesMatch>
+</ifModule>
+
+# add an expires date
+<IfModule mod_expires.c>
+	ExpiresActive On
+	ExpiresByType text/html "access plus 600 seconds"
+	ExpiresByType application/xhtml+xml "access plus 600 seconds"
+	ExpiresByType image/gif "access plus 15 days"
+	ExpiresByType image/jpg "access plus 15 days"
+	ExpiresByType image/jpeg "access plus 15 days"
+	ExpiresByType image/png "access plus 15 days"
+	ExpiresByType application/x-javascript "access plus 15 days"
+	ExpiresByType text/css "access plus 15 days"
+	ExpiresByType image/x-icon "access plus 360 days"
+</IfModule>
+
+# newer compression method if supported
+<IfModule mod_deflate.c>
+	<FilesMatch "\.(css|js|x?html?|php|pl|txt)$">
+		SetOutputFilter DEFLATE
+	</FilesMatch>
+</IfModule>
+
+# turn off last modified so the browser depends on expires header
+<ifModule mod_headers.c>
+  Header unset Last-Modified
+</ifModule>
+
+###################################
+# Ubar specific code              #
+###################################
+# remap action request to controller
+RewriteEngine  On
+RewriteRule ^[^/]+\.action$ /index.php [NE,L]
